--- a/css/index.css
+++ b/css/index.css
@@ -248,12 +248,25 @@
 .article4 {
     height: 343px;
     padding: 70px 0;
+    overflow: hidden;
 }
+
 
 .article4 .row {
     height: 202px;
     width: 1170px;
     margin: 0 auto;
+    transform: translateY(50%);
+    transition: all 1s 0s;
+    opacity: 0;
+}
+
+.article4.on .row {
+    height: 202px;
+    width: 1170px;
+    margin: 0 auto;
+    transform: translateY(0%);
+    opacity: 1;
 }
 
 .article4 .row .content {
@@ -265,16 +278,127 @@
 
 .article4 .row .content1 {
     width: 35%;
-    background-color: green;
+    padding-right: 40px;
+    /* background-color: green; */
 }
 .article4 .row .content2 {
     width: 20%;
 }
 .article4 .row .content3 {
     width: 20%;
-    background-color: blue;
 }
 .article4 .row .content4 {
     width: 25%;
-    background-color: yellow;
+}
+
+.article4 .content .tab {
+    overflow: hidden;
+    border-bottom: 1px solid #d9d9d9;
+    margin-bottom: 18px;
+}
+
+.article4 .content .tab li {
+    float: left;
+    display: inline-block;
+    border: 1px solid #d9d9d9;
+    border-bottom: none;
+    cursor:pointer;
+    padding: 10px 15px;
+}
+
+.article4 .content .tab li:first-child {
+    margin-left: 6px;
+}
+
+.article4 .content .table {
+    /* width: 335px;
+    height: 161px; */
+    font-size: 13px;
+    color: #666;
+}
+
+.article4 .content .table td {
+    padding: 9px 5px;
+}
+
+.article4 .content .table td:nth-child(1) {
+    width: 5%;
+    text-align: left;
+}
+
+.article4 .content .table td:nth-child(2) {
+    width: 70%;
+    text-align: left;
+}
+
+.article4 .content .table td:nth-child(3) {
+    text-align: right;
+}
+
+.article4 .content2 {
+    border-left: solid 1px #dedede;
+    border-right: solid 1px #dedede;
+}
+
+.article4 .content2 .con,
+.article4 .content3 .con
+ { 
+    padding: 16px 20px;
+    color: #666;
+    text-align: center;
+    transition: all .4s;
+}
+
+
+.article4 .content2:hover .con,
+.article4 .content3:hover .con
+ { 
+    padding: 16px 20px;
+    color: #666;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.article4 .content2 .con > div,
+.article4 .content3 .con > div{
+    overflow: hidden;
+}
+
+.article4 .content2 .con > div img,
+.article4 .content3 .con > div img{
+    transform: scale(1);
+    transition: all .4s;
+}
+
+.article4 .content2:hover .con > div img,
+.article4 .content3:hover .con > div img{
+    transform: scale(1.3);
+}
+
+.article4 .content2 .con > div img,
+.article4 .content3 .con > div img{
+    transform: scale(1);
+    transition: all .4s;
+}
+
+
+
+.article4 .content2 .con h2,
+.article4 .content3 .con h2
+{ 
+    font-size: 17px;
+    margin: 15px 0 7px;
+}
+
+.article4 .content2 .con p,
+.article4 .content3 .con p
+{ 
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.article4 .content4 .box {
+    border: 1px solid #dbdbdb;
+    padding: 15px 15px 19px;
+    min-height: 202px;
 }
