--- a/css/rwdIndex.css
+++ b/css/rwdIndex.css
@@ -1,3 +1,30 @@
 @media screen and (max-width:992px) {
 
+    /* .article2 구역 */
+    .article2 .content_g li {
+        display: inline-block;
+        float: left;
+        width: 50%;
+        padding: 0 15px;
+    }
+
+    /* article4 구역 */
+
+    .article4 .row .content1 {
+        width: 50%;
+        padding-right: 40px;
+    }
+    
+    .article4 .row .content2 {
+        width: 50%;
+    }
+    
+    .article4 .row .content3 {
+        width: 50%;
+    }
+    
+    .article4 .row .content4 {
+        width: 50%;
+    }
+
 }
