--- a/css/index.css
+++ b/css/index.css
@@ -156,7 +156,7 @@
     margin-top: 60px;
 }
 
-.article2 .content_g .content_title h1 {
+.article2 .content_g .content_title h2 {
     display: inline-block;
     color: #A6A6A6;
     line-height: 1;
@@ -178,13 +178,13 @@
 }
 
 .article2 .content_g .content img,
-.article2 .content_g .content h2,
+.article2 .content_g .content h3,
 .article2 .content_g .content p {
     transition: all .4s;
 }
 
 .article2 .content_g .content.on img,
-.article2 .content_g .content.on h2,
+.article2 .content_g .content.on h3,
 .article2 .content_g .content.on p {
     opacity: .5;
 }
@@ -204,7 +204,7 @@
     scale: 1.2;
 }
 
-.article2 .content_g .content h2 {
+.article2 .content_g .content h3 {
     font-size: 17px;
     color: #666;
     margin: 25px 0 13px;
@@ -509,27 +509,26 @@
     opacity: 1;
 }
 
-#section .article5 .last_slide_g .last_slide {
+.article5 .last_slide_g .last_slide {
     overflow: hidden;
-    height: 470px;
     padding: 80px 50px;
     font-size: 0;
 }
 
-#section .article5 .last_slide_g .last_slide .text {
+.article5 .last_slide_g .last_slide .text {
     display: inline-block;
     padding: 0 15px;
     float: left;
     width: 33.33%;
 }
 
-#section .article5 .last_slide_g .last_slide .text div:first-child {
+.article5 .last_slide_g .last_slide .text div:first-child {
     font-size: 43px;
     font-weight: 600;
     color: #a6a6a6;
 }
 
-#section .article5 .last_slide_g .last_slide .text .core {
+.article5 .last_slide_g .last_slide .text .core {
     display: inline-block;
     font-size: 17px;
     font-weight: 600;
@@ -541,7 +540,7 @@
     border-bottom: solid 1px #a6a6a6;
 }
 
-#section .article5 .last_slide_g .last_slide .text div:nth-child(3) {
+.article5 .last_slide_g .last_slide .text div:nth-child(3) {
     font-size: 15px;
     color: #666;
     line-height: 1.8;
@@ -550,11 +549,11 @@
     min-height: 130px;
 }
 
-#section .article5 .last_slide_g .last_slide .text div:last-child {
+.article5 .last_slide_g .last_slide .text div:last-child {
     padding-top: 15px;
 }
 
-#section .article5 .last_slide_g .last_slide .text .detail {
+.article5 .last_slide_g .last_slide .text .detail {
     display: inline-block;
     vertical-align: top;
     font-size: 11px;
@@ -564,10 +563,10 @@
     border: solid 1px #ccc;
 }
 
-#section .article5 .last_slide_g .last_slide .img {
+.article5 .last_slide_g .last_slide .img {
     display: inline-block;
     float: left;
-    height: 100%;
+    height: 309px;
     width: 66.66%;
     background-size: cover;
     background-position: center;
@@ -616,15 +615,54 @@
 
 /* footer 구역 */
 
-#footer .bottom_menu1 {
+#footer .bottom_menu_g {
     background-color: #111;
+    color: #666;
+}
+
+#footer .bottom_menu1 {
+    max-width: 1170px;
+    margin: 0 auto;
     padding-top: 50px;
+    font-weight: 600;
+    font-size: 15px;
+    text-align: center;
+}
+
+#footer .bottom_menu1 li {
+    display: inline-block;
+}
+
+#footer .bottom_menu1 li a {
+    display: block;
+    padding: 1px 45px;
+    border-right: solid 1px rgba(255, 255, 255, 0.12);
+}
+
+#footer .bottom_menu1 li:last-child a {
+    border: none;
 }
 
 #footer .bottom_menu2 {
-    background-color: #111;
+    max-width: 1170px;
+    margin: 0 auto;
+    font-size: 13px;
     padding: 35px 0 60px;
 }
+
+#footer .bottom_menu2 .address{
+    float: left;
+    width: 66.66%;
+    padding: 0 15px;
+    line-height: 2;
+}
+
+#footer .bottom_menu2 .sns{
+    float: left;
+    width: 33.33%;
+}
+
+
 
 
 
