--- a/css/index.css
+++ b/css/index.css
@@ -296,27 +296,40 @@
     opacity: 1;
 }
 
-.article4 .row .content {
+.article4 .left {
     float: left;
+    overflow: hidden;
+    width: 50%;
+}
+
+.article4 .right {
+    float: right;
+    overflow: hidden;
+    width: 50%;
+}
+
+
+.article4 .row .content {
     display: inline-block;
+    vertical-align: top;
     padding: 0 15px;
 }
 
 .article4 .row .content1 {
-    width: 35%;
+    width: 59%;
     padding-right: 40px;
 }
 
 .article4 .row .content2 {
-    width: 20%;
+    width: 40%;
 }
 
 .article4 .row .content3 {
-    width: 20%;
+    width: 40%;
 }
 
 .article4 .row .content4 {
-    width: 25%;
+    width: 59%;
 }
 
 .article4 .content .tab {
@@ -390,12 +403,35 @@
     border-right: solid 1px #dedede;
 }
 
+.article4 .content2,
+.article4 .content3 {
+    position: relative;
+}
+
+
 .article4 .content2 .con,
 .article4 .content3 .con {
     padding: 16px 20px;
     color: #666;
     text-align: center;
     transition: all .4s;
+}
+
+.article4 .content2 .con div,
+.article4 .content3 .con div {
+    position: relative;
+}
+
+.article4 .content2 .con div::before,
+.article4 .content3 .con div::before {
+    content:''; position:absolute; top:0; left:0; right:0;
+    bottom:0;  background:rgba(0,0,0,0);
+    transition:all 0.4s;
+}
+
+.article4 .content2:hover .con div::before,
+.article4 .content3:hover .con div::before{
+     background:rgba(0,0,0,0.5); z-index:9; 
 }
 
 
@@ -410,6 +446,19 @@
 .article4 .content2 .con>div,
 .article4 .content3 .con>div {
     overflow: hidden;
+}
+
+.article4 .content2 .go,
+.article4 .content3 .go {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-70%, -50%);
+    color: white;
+    z-index: 999;
+    height: 25px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 .article4 .content2 .con>div img,
@@ -428,6 +477,8 @@
     transform: scale(1);
     transition: all .4s;
 }
+
+
 
 
 .article4 .content2 .con h2,
@@ -608,19 +659,26 @@
 }
 
 .article5 .slick-prev {
-    left: 0px;
+    left: 20px;
     z-index: 999;
     color: #333;
-    background-image: url(../img/rsb-btn-l.png) cover no-repeat;
     border: none;
     transform: scale(3);
+    background-image: url(../img/rsb-btn-l.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .article5 .slick-next {
-    right: 0px;
+    right: 20px;
     color: #333;
     border: none;
     transform: scale(3);
+    background-image: url(../img/rsb-btn-r.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 
@@ -629,58 +687,23 @@
     top: 50%;
 }
 
+.article5 .slick-arrow .fa-angle-right {
+    opacity: 0;
+}
+
+.article5 .slick-arrow .fa-angle-left {
+    opacity: 0;
+}
+
+
+
 .article5 .slick-dots li {
     display: none;
 }
 
-/* footer 구역 */
 
-#footer .bottom_menu_g {
-    background-color: #111;
-    color: #666;
-}
 
-#footer .bottom_menu1 {
-    max-width: 1170px;
-    margin: 0 auto;
-    padding-top: 50px;
-    font-weight: 600;
-    font-size: 15px;
-    text-align: center;
-}
 
-#footer .bottom_menu1 li {
-    display: inline-block;
-}
-
-#footer .bottom_menu1 li a {
-    display: block;
-    padding: 1px 45px;
-    border-right: solid 1px rgba(255, 255, 255, 0.12);
-}
-
-#footer .bottom_menu1 li:last-child a {
-    border: none;
-}
-
-#footer .bottom_menu2 {
-    max-width: 1170px;
-    margin: 0 auto;
-    font-size: 13px;
-    padding: 35px 0 60px;
-}
-
-#footer .bottom_menu2 .address{
-    float: left;
-    width: 66.66%;
-    padding: 0 15px;
-    line-height: 2;
-}
-
-#footer .bottom_menu2 .sns{
-    float: left;
-    width: 33.33%;
-}
 
 
 
