--- a/css/rwdIndex.css
+++ b/css/rwdIndex.css
@@ -1,4 +1,63 @@
+@media screen and (max-width:1133px) {
 
+        /* article4 구역 */
+        
+    .article4 .left {
+        position: relative;
+        float: left;
+        overflow: hidden;
+        width: 50%;
+        height: 525px;
+    }
+
+    .article4 .row .content {
+        display: block;
+        vertical-align: top;
+        padding: 0 15px;
+    }
+
+    .article4 .row .content1 {
+        position: absolute;
+        top: 319px;
+        left: 0;
+        width: 100%;
+        padding-right: 40px;
+    }
+    
+    .article4 .row .content2 {
+        width: 100%;
+    }
+    
+    .article4 .row .content3 {
+        width: 100%;
+    }
+    
+    .article4 .row .content4 {
+        margin-top: 30px;
+        width: 100%;
+    }
+
+    
+    /* .article5 구역 */
+/* 
+    .article5 .slick-prev {
+        left: 30px;
+        z-index: 999;
+        color: #333;
+        border: none;
+        transform: scale(3);
+    }
+    
+    .article5 .slick-next {
+        right: 30px;
+        color: #333;
+        border: none;
+        transform: scale(3);
+    } */
+
+    
+
+}
 
 @media screen and (max-width:992px) {
 
@@ -18,7 +77,7 @@
         border-bottom: solid 1px #D9D9D9;
         padding: 0 10px 17px;
     }
-    
+
     .article2 .content_g .content_title span {
         display: block;
         color: #B2B2B2;
@@ -31,29 +90,13 @@
 
     /* article4 구역 */
 
-    .article4 .row .content1 {
-        width: 50%;
-        padding-right: 40px;
-    }
-
-    .article4 .row .content2 {
-        width: 50%;
-    }
-    
-    .article4 .row .content3 {
-        width: 50%;
-    }
-    
-    .article4 .row .content4 {
-        width: 50%;
-    }
 
 
- 
+
 
     /* article5 구역 */
 
-    
+
 
     .article5 .last_slide_g .last_slide {
         overflow: hidden;
@@ -82,16 +125,16 @@
         background-position: center;
         background-repeat: no-repeat;
     }
-    
-    .article5 .slick-arrow .fa-solid{
+
+    .article5 .slick-arrow .fa-solid {
         display: none;
     }
 
-}
 
 
 
 @media screen and (max-width:768px) {
+
     /* .article2 구역 */
     .article2 .content_g li {
         display: block;
@@ -100,29 +143,74 @@
         padding: 0 15px;
     }
 
-        /* article4 구역 */
+    /* article4 구역 */
 
-        .article4 .row .content1 {
-            width: 100%;
-            padding-right: 40px;
-        }
+    .article4 .left {
+        position: relative;
+        float: left;
+        overflow: hidden;
+        width: 100%;
+        height: 607px;
+    }
 
-        .article4 .row .content_center {
-            display: block;
-            width: 100%;
-        }
-        
-        .article4 .row .content2 {
-            width: 100%;
-        }
-        
-        .article4 .row .content3 {
-            width: 100%;
-        }
-        
-        .article4 .row .content4 {
-            width: 100%;
-        }
+    .article4 .right {
+        float: right;
+        overflow: hidden;
+        width: 100%;
+    }
+    
 
-   
+    .article4 .row .content {
+        display: block;
+        vertical-align: top;
+        padding: 0 15px;
+    }
+
+    .article4 .row .content1 {
+        position: absolute;
+        top: 0px;
+        left: 0;
+        width: 100%;
+        padding-right: 40px;
+    }
+    
+    .article4 .row .content2 {
+        position: absolute;
+        top: 240px;
+        width: 100%;
+    }
+    
+    .article4 .row .content3 {
+        width: 100%;
+    }
+    
+    .article4 .row .content4 {
+        margin-top: 30px;
+        width: 100%;
+    }
+    
+
+    .article4 .content2 .con,
+    .article4 .content3 .con {
+        margin-top: 40px;
+        border: solid 1px #dedede;
+        padding: 16px 20px;
+        color: #666;
+        text-align: center;
+        transition: all .4s;
+    }
+
+    .article4 .content4 .box {
+        margin-top: 40px;
+        border: 1px solid #dbdbdb;
+        padding: 15px 15px 19px;
+        min-height: 202px;
+        text-align: center;
+    }
+
+
+ 
+
+
+
 }
