--- a/css/common.css
+++ b/css/common.css
@@ -101,10 +101,12 @@
     width: 100%;
     padding: 13px 21px;
     background: rgba(0, 0, 0, 0.65);
-    display: none;
-    transform: translateX(-13px);
-    transition: all .5s;
+    opacity: 0;
+    visibility: collapse;
+    transform: translateX(-15px);
 }
+
+
 
 
 #navGroup .nav > .depth1 > li .depth2 > li a{
@@ -199,6 +201,14 @@
     display: block;
     padding: 1px 45px;
     border-right: solid 1px rgba(255, 255, 255, 0.12);
+    transition: all .2s;
+}
+
+#footer .bottom_menu1 li.on a {
+    display: block;
+    padding: 1px 45px;
+    border-right: solid 1px rgba(255, 255, 255, 0.12);
+    color: #333;
 }
 
 #footer .bottom_menu1 li:last-child a {
@@ -244,5 +254,4 @@
     display: inline-block;
     padding: 0 2px;
 }
-
 
