--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@
     font-weight: 500;
     letter-spacing: 15px;
     opacity: 0;
-    transition: all 2s;
+    transition: all 1s 0.6s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title h1 {
@@ -39,7 +39,7 @@
     font-size: 17px;
     margin: 10px 0;
     opacity: 0;
-    transition: all 2s;
+    transition: all 1s 0.6s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title h2 {
@@ -54,7 +54,7 @@
     color: rgba(255, 255, 255, 0.45);
     line-height: 1.4;
     opacity: 0;
-    transition: all 2s;
+    transition: all 1s 0.6s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title p {
@@ -429,54 +429,84 @@
     transition:all 0.4s;
 }
 
-.article4 .content2:hover .con div::before,
-.article4 .content3:hover .con div::before{
+
+.article4 .content2 .con:hover div::before,
+.article4 .content3 .con:hover div::before{
      background:rgba(0,0,0,0.5); z-index:9; 
 }
 
 
+
+/* 
 .article4 .content2:hover .con,
 .article4 .content3:hover .con {
     padding: 16px 20px;
     color: #666;
     text-align: center;
     color: rgba(0, 0, 0, 0.3);
-}
+} */
 
 .article4 .content2 .con>div,
 .article4 .content3 .con>div {
     overflow: hidden;
 }
 
-.article4 .content2 .go,
-.article4 .content3 .go {
+.article4 .content2 .con span,
+.article4 .content3 .con span {
     position: absolute;
-    top: 30%;
+    line-height: 1.2;
+    top: 32%;
     left: 50%;
-    transform: translate(-70%, -50%);
+    width: 50px;
+    transform: translate(-50%, -50%);
+    font-weight: 600;
+    opacity: 0;
     color: white;
-    z-index: 999;
+    z-index: 999999;
     height: 25px;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border: 1px solid white;
+    transition: all .4s;
 }
+
+.article4 .content2 .con.on span,
+.article4 .content3 .con.on span {
+    position: absolute;
+    line-height: 1.2;
+    top: 32%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 600;
+    opacity: 1;
+    color: white;
+    z-index: 999999;
+    height: 25px;
+    border: 1px solid white;
+}
+
+.article4 .content2 .con span b,
+.article4 .content3 .con span b {
+    position: absolute;
+    line-height: 1.2;
+    top: 32%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999999;
+    padding: 4px 8px;
+}
+
 
 .article4 .content2 .con>div img,
 .article4 .content3 .con>div img {
     transform: scale(1);
     transition: all .4s;
+    width: 100%;
 }
 
-.article4 .content2:hover .con>div img,
-.article4 .content3:hover .con>div img {
+.article4 .content2 .con:hover>div img,
+.article4 .content3 .con:hover>div img {
     transform: scale(1.3);
 }
 
-.article4 .content2 .con>div img,
-.article4 .content3 .con>div img {
-    transform: scale(1);
-    transition: all .4s;
-}
 
 
 
