--- a/css/rwdIndex.css
+++ b/css/rwdIndex.css
@@ -52,27 +52,71 @@
 
 
     /* .article5 구역 */
-    /* 
-    .article5 .slick-prev {
-        left: 30px;
-        z-index: 999;
-        color: #333;
-        border: none;
-        transform: scale(3);
-    }
-    
-    .article5 .slick-next {
-        right: 30px;
-        color: #333;
-        border: none;
-        transform: scale(3);
-    } */
-
-
+ 
 
 }
 
 @media screen and (max-width:992px) {
+
+    /* article1 구역 */
+    #section .article1 .slide_g .slide {
+        position: relative;
+        height: 436px;
+    }
+
+    #section .article1 .slide_g .slide_title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: 50px;
+        width: 834.5px;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: rgba(255, 255, 255, 0.65);
+        z-index: 99999;
+    }
+
+    #section .article1 .slide_g .slide_title h1 {
+        transform: translateX(0px);
+        font-size: 57px;
+        font-weight: 500;
+        letter-spacing: 10px;
+        opacity: 0;
+        transition: all 2s;
+    }
+    
+    #section .article1 .slick-slide.slick-current.slick-active .slide_title h1 {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+    
+    
+    
+    #section .article1 .slide_g .slide_title h2 {
+        transform: translateX(0px);
+        font-size: 17px;
+        margin: 10px 0;
+        opacity: 0;
+        transition: all 2s;
+    }
+    
+    #section .article1 .slick-slide.slick-current.slick-active .slide_title h2 {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+    
+    
+    #section .article1 .slide_g .slide_title p {
+        display: none;
+    }
+   
+
+
+    .article1 .slick-arrow .fa-solid {
+        display: none;
+    }
+
+
 
     /* .article2 구역 */
     .article2 .content_g li {
@@ -147,6 +191,26 @@
 
     @media screen and (max-width:768px) {
 
+        /* .article1 구역 */
+        #section .article1 .slide_g .slide {
+            position: relative;
+            height: 380px;
+        }
+
+
+        #section .article1 .slide_g .slide_title h1 {
+            font-size: 40px;
+            font-weight: 500;
+            letter-spacing: 0;
+            opacity: 0;
+            transition: all 2s;
+        }
+        
+        #section .article1 .slick-slide.slick-current.slick-active .slide_title h1 {
+            opacity: 1;
+        }
+    
+        
         /* .article2 구역 */
         .article2 .content_g li {
             display: block;
