--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@
     font-weight: 500;
     letter-spacing: 15px;
     opacity: 0;
-    transition: all 1s 0.6s;
+    transition: all 2s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title h1 {
@@ -39,7 +39,7 @@
     font-size: 17px;
     margin: 10px 0;
     opacity: 0;
-    transition: all 1s 0.6s;
+    transition: all 2s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title h2 {
@@ -54,7 +54,7 @@
     color: rgba(255, 255, 255, 0.45);
     line-height: 1.4;
     opacity: 0;
-    transition: all 1s 0.6s;
+    transition: all 2s;
 }
 
 #section .article1 .slick-slide.slick-current.slick-active .slide_title p {
