--- a/css/rwdcommon.css
+++ b/css/rwdcommon.css
@@ -35,6 +35,7 @@
 
 @media screen and (max-width:992px) {
 
+    
 
     #header {
         position: fixed;
@@ -86,7 +87,7 @@
         cursor: pointer;
     }
 
-    
+
     #navGroup .nav>.depth1>li>a {
         display: block;
         margin: 0;
@@ -97,13 +98,13 @@
         border-top: solid 1px rgba(255, 255, 255, 0.15);
         border-bottom: solid 0px rgba(255, 255, 255, 0.15);
     }
-    
+
     #navGroup .nav>.depth1>li>a.on {
         color: rgba(255, 255, 255, 0.9);
         border-bottom: solid 1px rgba(255, 255, 255, 0.15);
     }
-    
-    
+
+
     #navGroup .nav>.depth1>li .depth2 {
         display: none;
         position: static;
@@ -117,9 +118,9 @@
         opacity: 1;
         transform: translateX(0px);
     }
-    
-    
-    
+
+
+
     #navGroup .nav>.depth1>li .depth2>li a {
         display: block;
         padding: 9px 5px;
@@ -134,11 +135,11 @@
         color: rgba(255, 255, 255, 0.45);
         border-bottom: none;
     }
-    
-    #navGroup .nav > .depth1 > li:nth-child(4) a {
+
+    #navGroup .nav>.depth1>li:nth-child(4) a {
         border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
-    
+
     /* 네비게이션 상단 */
     #navGroup .nav2 {
         float: none;
@@ -226,13 +227,13 @@
         text-align: center;
     }
 
-    #footer .bottom_menu2 .address .address_content span{
+    #footer .bottom_menu2 .address .address_content span {
         float: none;
         display: block;
         text-align: center;
     }
 
-    #footer .bottom_menu2 .address .address_content > span > span {
+    #footer .bottom_menu2 .address .address_content>span>span {
         display: none;
     }
 
@@ -251,7 +252,18 @@
     }
 
 
-
+    /* popup 스타일 */
+    .popup {
+        display: none;
+        position: fixed;
+        padding: 20px;
+        top: 100px;
+        left: 50px;
+        width: 300px;
+        height: 400px;
+        background: rgba(255, 255, 255, 0.8);
+        z-index: 99999999;
+    }
 
 
 }
