--- a/css/rwdIndex.css
+++ b/css/rwdIndex.css
@@ -7,10 +7,11 @@
         float: left;
         overflow: hidden;
         width: 50%;
-        height: 525px;
+        height: 575px;
     }
 
     .article4 .row .content {
+        position: relative;
         display: block;
         vertical-align: top;
         padding: 0 15px;
@@ -18,7 +19,7 @@
 
     .article4 .row .content1 {
         position: absolute;
-        top: 319px;
+        bottom: 0;
         left: 0;
         width: 100%;
         padding-right: 40px;
@@ -151,6 +152,7 @@
         border-left: none;
         border-right: solid 1px #dedede;
     }
+    
 
     /* article5 구역 */
 
