--- a/css/rwdcommon.css
+++ b/css/rwdcommon.css
@@ -35,7 +35,6 @@
 
 @media screen and (max-width:992px) {
 
-    
 
     #header {
         position: fixed;
@@ -171,7 +170,7 @@
     #header .open {
         display: block;
         position: absolute;
-        top: 55px;
+        top: 62px;
         right: 15px;
         z-index: 99;
         cursor: pointer;
@@ -180,7 +179,7 @@
         padding: 5px 5px;
     }
 
-    #header .close {
+    /* #header .close {
         display: none;
         position: absolute;
         top: 55px;
@@ -190,7 +189,59 @@
         color: white;
         font-size: 25px;
         padding: 5px 5px;
+    } */
+
+
+    /* 햄버거 x변환 */
+    .open,
+    .open span {
+        display: inline-block;
+        transition: all 0.2s;
+        box-sizing: border-box;
     }
+
+    .open {
+        position: relative;
+        width: 25px;
+        height: 20px;
+    }
+
+    .open span {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        border-radius: 4px;
+    }
+
+    .open span:nth-of-type(1) {
+        top: 0;
+    }
+
+    .open span:nth-of-type(2) {
+        top: 9px;
+    }
+
+    .open span:nth-of-type(3) {
+        bottom: 0;
+    }
+
+    /* 2th bar 사라지고,  1st 3rd bar 회전하며 X  */
+
+    .open.active-1 span:nth-of-type(1) {
+        transform: translateY(9px) rotate(-45deg);
+    }
+
+    .open.active-1 span:nth-of-type(2) {
+        opacity: 0;
+    }
+
+    .open.active-1 span:nth-of-type(3) {
+        transform: translateY(-9px) rotate(45deg);
+    }
+
+
 
     /* footer 구역 */
 
@@ -252,18 +303,7 @@
     }
 
 
-    /* popup 스타일 */
-    .popup {
-        display: none;
-        position: fixed;
-        padding: 20px;
-        top: 100px;
-        left: 50px;
-        width: 300px;
-        height: 400px;
-        background: rgba(255, 255, 255, 0.8);
-        z-index: 99999999;
-    }
+
 
 
 }
