--- a/css/rwdcommon.css
+++ b/css/rwdcommon.css
@@ -302,7 +302,17 @@
         margin-top: 25px;
     }
 
-
+    .popup {
+        display: none;
+        position: fixed;
+        padding: 20px;
+        top: 100px;
+        left: 45px;
+        width: 300px;
+        height: 300px;
+        background: rgba(255, 255, 255, 0.8);
+        z-index: 99999999;
+    }
 
 
 
